--- a/css/pages/workshops.css
+++ b/css/pages/workshops.css
@@ -56,25 +56,15 @@
     position: relative;
     height: 85vh;
     width: 100%;
-    /* Background moved to .workshop-hero__bg */
+    background: url('../../images/workshop/hero-image-pottery.webp') center/cover no-repeat;
     display: flex;
     align-items: center;
     justify-content: center;
     color: var(--white, #fff);
     text-align: center;
     overflow: hidden;
-}
-
-.workshop-hero__bg {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: url('../../images/workshop/hero-image-pottery.webp') center/cover no-repeat;
-    z-index: -1;
-    pointer-events: none;
-    will-change: transform; /* Hint for smoother scrolling */
+    background-position: center center;
+    background-attachment: fixed;
 }
 
 
